# valkey-ocaml

./: .gitignore  AUDIT.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  STATUS.md  docker-compose.cluster.yml  docker-compose.toxiproxy.yml  docker-compose.yml  dune-project  index.html  latest.json  valkey.opam
.github/workflows/: bench.yml  ci.yml  coverage.yml  docs.yml  fuzz-nightly.yml
agent-knowledge/: AGENTS.md  connection-pool-designs-in-redisvalkey-clients-and-adjacent-db-c.md
agent-knowledge/resources/: connection-pool-designs-in-redisvalkey-clients-and-adjacent-db-c-sources.json
bench-results-2026-04-28/: core_N1_plain.json  core_N1_tls.json  core_N2_plain.json  core_N2_tls.json  core_N4_plain.json  core_N4_tls.json  large_N1_plain.json  large_N1_tls.json  large_N2_plain.json  large_N2_tls.json  large_N4_plain.json  large_N4_tls.json  server-cpu_N1_plain.json  server-cpu_N2_plain.json  server-cpu_N4_plain.json
bench-results-2026-04-28-before-nodelay/: core_N1_plain.json  core_N1_tls.json  core_N2_plain.json  core_N2_tls.json  core_N4_plain.json  core_N4_tls.json  large_N1_plain.json  large_N1_tls.json  large_N2_plain.json  large_N2_tls.json  large_N4_plain.json  large_N4_tls.json  server-cpu_N1_plain.json  server-cpu_N2_plain.json  server-cpu_N4_plain.json
docs/: batch.md  client-side-caching.md  cluster.md  getting-started.md  migration-from-ocaml-redis.md  performance.md  tls.md  transactions.md
examples/02-cluster/: README.md  routing.ml
examples/08-blocking-commands/: main.ml
examples/10-batch/: README.md  atomic_counters.ml  bulk.ml  cas_with_watch.ml  dune  scatter.ml
guides/: batch.md  client-side-caching.md  getting-started.md  observability.md  pubsub.md  security.md  troubleshooting.md
lib/: batch.ml  batch.mli  blocking_pool.ml  blocking_pool.mli  byte_reader.ml  byte_reader.mli  cache.ml  cache.mli  client.ml  client.mli  client_cache.ml  cluster_pubsub.ml  cluster_pubsub.mli  cluster_router.ml  cluster_router.mli  command_spec.ml  command_spec.mli  connection.ml  connection.mli  discovery.ml  discovery.mli  dune  inflight.ml  inflight.mli  invalidation.ml  named_commands.ml  named_commands.mli  node_pool.ml  node_pool.mli  observability.ml  observability.mli  pubsub.ml  pubsub.mli  resp3_writer.ml  resp3_writer.mli  router.ml  router.mli  slot.ml  slot.mli  tls_config.ml  (+4 more)
scripts/: bench-conns-per-node.sh  bench-pivot.sh  cluster-hosts-setup.sh  gen-tls-certs.sh  install-git-hooks.sh  run-bench.sh
scripts/chaos/: chaos.sh
scripts/git-hooks/: pre-push
test/: dune  run_tests.ml  test_admin_family.ml  test_batch.ml  test_byte_reader.ml  test_cache.ml  test_client.ml  test_client_admin.ml  test_cluster.ml  test_command_spec.ml  test_connection.ml  test_csc_bcast.ml  test_csc_cluster.ml  test_csc_invalidation.ml  test_csc_lifecycle.ml  test_csc_optin.ml  test_csc_optin_cluster.ml  test_csc_optin_migration.ml  test_csc_tracking.ml  test_discovery.ml  test_generic_hll.ml  test_geo.ml  test_inflight.ml  test_invalidation.ml  test_mtls_config.ml  test_named_commands.ml  test_observability.ml  test_pubsub.ml  test_slot.ml  test_sorted_set.ml  test_support.ml  test_topology.ml  unit_tests.ml
test/fixtures/mtls/: ca.crt  client.crt  client.key
valkey/: index.html
valkey/Valkey/: index.html
valkey/Valkey/Batch/: index.html
valkey/Valkey/Byte_reader/: index.html
valkey/Valkey/Cache/: index.html
valkey/Valkey/Client/: index.html
valkey/Valkey/Client/Config/: index.html
valkey/Valkey/Client/For_testing/: index.html
valkey/Valkey/Client/Script/: index.html
valkey/Valkey/Client_cache/: index.html
valkey/Valkey/Cluster_pubsub/: index.html
valkey/Valkey/Cluster_router/: index.html
valkey/Valkey/Cluster_router/Config/: index.html
valkey/Valkey/Cluster_router/For_testing/: index.html
valkey/Valkey/Command_spec/: index.html
valkey/Valkey/Connection/: index.html
valkey/Valkey/Connection/Circuit_breaker/: index.html
valkey/Valkey/Connection/Circuit_breaker/Config/: index.html
valkey/Valkey/Connection/Config/: index.html
valkey/Valkey/Connection/Error/: index.html
valkey/Valkey/Connection/Handshake/: index.html
valkey/Valkey/Connection/Reconnect/: index.html
valkey/Valkey/Discovery/: index.html
valkey/Valkey/Error/: index.html
valkey/Valkey/Named_commands/: index.html
valkey/Valkey/Node_pool/: index.html
valkey/Valkey/Observability/: index.html
valkey/Valkey/Pubsub/: index.html
valkey/Valkey/Redirect/: index.html
valkey/Valkey/Resp3/: index.html
valkey/Valkey/Resp3_parser/: index.html
valkey/Valkey/Resp3_writer/: index.html
valkey/Valkey/Router/: index.html
valkey/Valkey/Router/Fan_target/: index.html
valkey/Valkey/Router/Read_from/: index.html
valkey/Valkey/Slot/: index.html
valkey/Valkey/Tls_config/: index.html
valkey/Valkey/Topology/: index.html
valkey/Valkey/Topology/Node/: index.html
valkey/Valkey/Topology/Shard/: index.html
valkey/Valkey/Transaction/: index.html
